--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
